# expressways

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md
apps/expressways-console/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
apps/expressways-console/src/: App.tsx  api.ts  index.css  types.ts
apps/expressways-console/src-tauri/: Cargo.toml  tauri.conf.json
apps/expressways-console/src-tauri/src/: lib.rs  main.rs
apps/expressways-console/src/store/: monitorStore.ts
apps/expressways-gateway/: README.md  package-lock.json  package.json  server.js
apps/expressways-gateway/public/: index.html
configs/: aetherbus.example.toml  expressways.example.toml
crates/aetherbus-audit/: Cargo.toml
crates/aetherbus-audit/src/: lib.rs
crates/aetherbus-auth/: Cargo.toml
crates/aetherbus-auth/src/: lib.rs
crates/aetherbus-client/: Cargo.toml
crates/aetherbus-client/src/: lib.rs
crates/aetherbus-policy/: Cargo.toml
crates/aetherbus-policy/src/: lib.rs
crates/aetherbus-protocol/: Cargo.toml
crates/aetherbus-protocol/src/: lib.rs
crates/aetherbus-server/: Cargo.toml
crates/aetherbus-server/src/: config.rs  main.rs  quota.rs
crates/aetherbus-storage/: Cargo.toml
crates/aetherbus-storage/src/: lib.rs
crates/expressways-adopter-api/: Cargo.toml
crates/expressways-adopter-api/src/: lib.rs
crates/expressways-adopter-audit-integrity/: Cargo.toml
crates/expressways-adopter-audit-integrity/src/: lib.rs
crates/expressways-adopter-registry-guard/: Cargo.toml
crates/expressways-adopter-registry-guard/src/: lib.rs
crates/expressways-adopter-storage-guard/: Cargo.toml
crates/expressways-adopter-storage-guard/src/: lib.rs
crates/expressways-audit/: Cargo.toml
crates/expressways-audit/src/: lib.rs
crates/expressways-auth/: Cargo.toml
crates/expressways-auth/src/: lib.rs
crates/expressways-bench/: Cargo.toml
crates/expressways-bench/src/: main.rs
crates/expressways-client/: Cargo.toml
crates/expressways-client/src/: lib.rs
crates/expressways-orchestrator/: Cargo.toml
crates/expressways-orchestrator/src/: lib.rs  main.rs
crates/expressways-policy/: Cargo.toml
crates/expressways-policy/src/: lib.rs
crates/expressways-protocol/: Cargo.toml
crates/expressways-protocol/src/: lib.rs
crates/expressways-server/: Cargo.toml
crates/expressways-server/src/: adopters.rs  artifacts.rs  config.rs  main.rs  metrics.rs  registry.rs  registry_events.rs
crates/expressways-storage/: Cargo.toml
crates/expressways-storage/src/: lib.rs
docs/: main.md
docs/adr/: 0001-phase-1-scope.md  0002-discovery-registry-first-advanced-feature.md
docs/design/: discovery-registry.md  event-driven-orchestrator.md  performance-pathfinding.md  phase-1-system-design.md  security-compliance-baseline.md
docs/plans/: aetherbus-sprint-plan.md  expressways-sprint-plan.md
docs/reviews/: aetherbus-critical-review.md  expressways-critical-review.md  io-uring-decision-memo.md
