[workspace]
members = [
  "crates/expressways-audit",
  "crates/expressways-auth",
  "crates/expressways-bench",
  "crates/expressways-client",
  "crates/expressways-orchestrator",
  "crates/expressways-policy",
  "crates/expressways-protocol",
  "crates/expressways-server",
  "crates/expressways-storage",
]
resolver = "2"

[workspace.package]
edition = "2024"
license = "MIT"
rust-version = "1.93"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
bincode = "1.3.3"
chrono = { version = "0.4.42", features = ["serde"] }
clap = { version = "4.5.53", features = ["derive"] }
ed25519-dalek = "2.2.0"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
rand_core = { version = "0.6.4", features = ["getrandom"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10.9"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["fs", "io-util", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-util = { version = "0.7.17", features = ["codec"] }
toml = "0.9.8"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
