[package]
name = "aetherbus-server"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aetherbus-audit = { path = "../aetherbus-audit" }
aetherbus-auth = { path = "../aetherbus-auth" }
aetherbus-policy = { path = "../aetherbus-policy" }
aetherbus-protocol = { path = "../aetherbus-protocol" }
aetherbus-storage = { path = "../aetherbus-storage" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
