[package]
name = "aetherbus-storage"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
aetherbus-protocol = { path = "../aetherbus-protocol" }
bincode.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
