[package]
name = "expressways-adopter-audit-integrity"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
expressways-adopter-api = { path = "../expressways-adopter-api" }
expressways-audit = { path = "../expressways-audit" }
serde.workspace = true
toml.workspace = true
