[package]
name = "expressways-adopter-registry-guard"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
expressways-adopter-api = { path = "../expressways-adopter-api" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
