[package]
name = "expressways-bench"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
expressways-auth = { path = "../expressways-auth" }
expressways-client = { path = "../expressways-client" }
expressways-protocol = { path = "../expressways-protocol" }
expressways-storage = { path = "../expressways-storage" }
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
toml.workspace = true
uuid.workspace = true
