[features]
default = [
  "adopter-audit-integrity",
  "adopter-storage-guard",
  "adopter-registry-guard",
]
adopter-audit-integrity = ["dep:expressways-adopter-audit-integrity"]
adopter-storage-guard = ["dep:expressways-adopter-storage-guard"]
adopter-registry-guard = ["dep:expressways-adopter-registry-guard"]

[package]
name = "expressways-server"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
expressways-adopter-api = { path = "../expressways-adopter-api" }
expressways-adopter-audit-integrity = { path = "../expressways-adopter-audit-integrity", optional = true }
expressways-adopter-registry-guard = { path = "../expressways-adopter-registry-guard", optional = true }
expressways-adopter-storage-guard = { path = "../expressways-adopter-storage-guard", optional = true }
expressways-audit = { path = "../expressways-audit" }
expressways-auth = { path = "../expressways-auth" }
expressways-policy = { path = "../expressways-policy" }
expressways-protocol = { path = "../expressways-protocol" }
expressways-storage = { path = "../expressways-storage" }
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
futures-util.workspace = true
hex.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
toml.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
expressways-client = { path = "../expressways-client" }
expressways-orchestrator = { path = "../expressways-orchestrator" }
